--- a/onboarding/stylesheets/css/main.css
+++ b/onboarding/stylesheets/css/main.css
@@ -1,40 +1,55 @@
+
+ @font-face { font-family: Avenir; src: url('/Avenir-Bold.ttf'); } 
+
 body {
     
-    font-family: "nimbus-sans";
+    font-family: "Avenir";
+    color: #2B303D;
 }
 
-a .header-links {
-    color: white;
-    padding-top:10px;
+
+.flex-container-center {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    margin: 15px;
 }
 
-.header-bar {
-    background-color: #1047A9;
-    color: white;   
+.dg-column-start {
+    padding-top:50px;
 }
 
-.welcome {
-    width: 100px;
-    background: #1047A9;
-    -webkit-transition: width 4s; /* Safari */
-    transition: width 4s;
+
+.dg-progress-bar {
+    display: flex;
+    justify-content: space-evenly; 
+    padding-top:50px; 
+    border-bottom: solid 3px #296EFB;
 }
 
-.add-phone {
-    width: 100px;
-    background: #66CCDD;
-    -webkit-transition: width 4s; /* Safari */
-    transition: width 4s;
+.dg-progress-bar-item {
+    margin-left:20px; 
+    margin-right: 20px;
 }
 
-.login {
-    width: 100px;
-    background: #6CDBC0;
-    -webkit-transition: width 4s; /* Safari */
-    transition: width 4s;
+.dg-progress-bar-item-login {
+    margin-left:20px; 
+    margin-right: 10px;
 }
 
-/* Standard syntax */
-#welcome {transition-timing-function: ease;}
-#add-phone {transition-timing-function: ease;}
-#login {transition-timing-function: ease;}
+.dg-onboard h1 {
+    padding-bottom: 40px;
+}
+
+.dg-onboard p {
+    font-size: 1.5rem;
+    padding-bottom: 40px;
+}
+
+@media all and (max-width: 760px) and (min-width: 300px) {
+    .placeholder {
+        width: 50%;
+
+    }
+}
+
