dg-form-label-check fix

--- a/onboarding/stylesheets/css/forms.css
+++ b/onboarding/stylesheets/css/forms.css
@@ -55,4 +55,11 @@ input {
   input:focus ~ .label-box::after {
     width: 50%;
   }
+
+  .dg-form-check-label {
+    margin-bottom: 0;
+    top: 4px;
+    font-size: 12px;
+}
+  }
   
