--- a/onboarding/stylesheets/css/forms.css
+++ b/onboarding/stylesheets/css/forms.css
@@ -45,7 +45,7 @@ input {
     position: absolute;
     height: 2px;
     width: 0;
-    bottom: 40px;
+    bottom: 2rem;
     background-color: #296EFB;
     transition: all 0.3s;
   }
@@ -65,9 +65,14 @@ input {
     top: 4px;
     font-size: 14px;
     position: relative;
+    left: 16px;
+    color: #2B303D;
 }
 
 .dg-form-mt {
   margin-top: 2.5rem;
 }
-  
+
+.dg-form-content {
+  max-width: 200px;
+}
