--- a/onboarding/stylesheets/css/stepper.css
+++ b/onboarding/stylesheets/css/stepper.css
@@ -92,3 +92,115 @@ html {
 	right:60%;
 	
 }
+
+/*BOOTSTRAP STEPPER*/
+
+.stepper-horizontal {
+    position: relative;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+}
+
+
+
+.stepper-horizontal li {
+    -webkit-transition: .5s;
+    -o-transition: .5s;
+    transition: .5s;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-flex: 1;
+    -webkit-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+    position: relative;
+}
+
+.stepper li a .circle {
+    display: inline-block;
+    color: #fff;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+    background: rgba(0,0,0,.38);
+    width: 1.5rem;
+    height: 1.5rem;
+    text-align: center;
+    line-height: 1.5rem;
+    margin-right: .5rem;
+}
+
+.stepper li.completed a .circle {
+    background-color: #296efb!important;
+}
+
+.stepper li.active a .label, .stepper li.completed a .label {
+    font-weight: 600;
+    color: rgba(0,0,0,.87);
+}
+
+.stepper-horizontal li a .label {
+    margin-top: .63rem;
+}
+
+.stepper li a {
+    padding: 1.5rem;
+    font-size: .88rem;
+    text-align: center;
+}
+
+
+
+.stepper li a .label {
+    display: inline-block;
+}
+
+.stepper-horizontal li:before {
+    top: 14px;
+    bottom: 0;
+    position: absolute;
+    content: " ";
+    width: 100%;
+    height: 2px;
+    background-color: #999;
+}
+
+.stepper-horizontal li:not(:last-child):after {
+    content: "";
+    position: relative;
+    -webkit-box-flex: 1;
+    -webkit-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+    margin: .5rem 0 0 0;
+    height: 1px;
+    background-color: #999;
+}
+
+.stepper-horizontal li:not(:first-child):before {
+    content: "";
+    position: relative;
+    -webkit-box-flex: 1;
+    -webkit-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+    margin: .5rem 0 0 0;
+    height: 1px;
+    background-color:#999;
+}
+
+*, ::after, ::before {
+    box-sizing: border-box;
+}
+
